Clean up and prepare for takeoff

--- a/css/main.css
+++ b/css/main.css
@@ -94,23 +94,8 @@ textarea {
 }
 
 /* ==========================================================================
-   Author's custom styles
+   Author's custom styles: SEE custom.css
    ========================================================================== */
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 /* ==========================================================================
