--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,85 @@
 /* Custom CSS styles by Ben Cuan */
 
+/* ====================================
+ * COLOR PALETTE
+ * https://materializecss.com/color.html
+ * #1e88e5 blue darken-1
+ * #283593 indigo darken-3
+ * ==================================== */
 
+/* ====================================
+ * UNIVERSAL
+ * ==================================== */
+
+* {
+    overflow-x: hidden;
+}
+
+/* ====================================
+ * BANNER
+ * ==================================== */
+
+#banner {
+    width: 100%;
+    min-height: 100vh;
+    max-width: 100%;
+    position: relative;
+    top: 0;
+    left: 0;
+    padding-top: 0;
+    z-index: 100;
+    background: #283593;
+}
+
+#banner-background {
+    animation: 2s ease-in-out 0s 1 fadein forwards;
+    width: 100%;
+    height: 100%;
+}
+
+#banner-name {
+    opacity: 0;
+    animation: 1s ease-in-out 1s 1 fadein forwards;
+    margin: 50vh auto;
+    width: 100%;
+    text-align: center;
+    color: white;
+    font-size: 60px;
+    font-family: 'Pompiere', sans-serif;
+    overflow: hidden;
+}
+
+/* ====================================
+ * ANIMATIONS
+ * ==================================== */
+
+@keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+/* Firefox < 16 */
+
+@-moz-keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+
+@-webkit-keyframes fadein {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
