--- a/css/custom.css
+++ b/css/custom.css
@@ -20,6 +20,7 @@
 }
 
 body {
+    z-index: 100;
     height: 100%;
     /* overflow-x: hidden; */
     background: #283593;
@@ -46,6 +47,7 @@ h1 {
     color: white;
     font-family: 'Rajdhani', sans-serif;
     font-size: 1.5rem;
+    transition: background-color 0.5s ease-in-out;
 }
 
 .navbar a {
