--- a/css/custom.css
+++ b/css/custom.css
@@ -57,11 +57,10 @@ h1 {
     color: white;
     font-family: 'Rajdhani', sans-serif;
     font-size: 1.5rem;
+    -moz-transition: background-color 0.5s ease-in-out;
+    -webkit-transition: background-color 0.5s ease-in-out;
+    -ms-transition: background-color 0.5s ease-in-out;
     transition: background-color 0.5s ease-in-out;
-    -moz-transition: opacity 0.325s ease-in-out, -moz-transform 0.325s ease-in-out;
-    -webkit-transition: opacity 0.325s ease-in-out, -webkit-transform 0.325s ease-in-out;
-    -ms-transition: opacity 0.325s ease-in-out, -ms-transform 0.325s ease-in-out;
-    transition: opacity 0.325s ease-in-out, transform 0.325s ease-in-out;
 }
 
 .navbar a {
@@ -75,6 +74,9 @@ h1 {
     border-bottom: 0.1em solid white;
     transform: scaleX(0);
     transition: transform 0.5s ease-in-out;
+    -moz-transition: -moz-transform 0.5s ease-in-out;
+    -webkit-transition: -webkit-transform 0.5s ease-in-out;
+    -o-transition: -o-transform 0.5s ease-in-out;
 }
 
 @media only screen and (min-width: 900px) {
@@ -420,6 +422,9 @@ body.is-article-visible #header {
 #footer-content i {
     transform: scale(1);
     transition: transform 0.5s ease-in-out;
+    -webkit-transition: -webkit-transform 0.5s ease-in-out;
+    -moz-transition: -moz-transform 0.5s ease-in-out;
+    -o-transition: -o-transform 0.5s ease-in-out;
 }
 
 #footer-content i:hover {
