--- a/css/custom.css
+++ b/css/custom.css
@@ -40,11 +40,10 @@ h1 {
 
 @media only screen and (min-width: 1024px) {
     h1 {
-      font-size: 5em;
+        font-size: 5em;
     }
-
     h3 {
-      font-size: 2em;
+        font-size: 2em;
     }
 }
 
@@ -208,6 +207,10 @@ nav button {
  * EXPERIENCE
  * ==================================== */
 
+#experience {
+  overflow-y: hidden;
+}
+
 #experience .underline:after {
     width: 20rem;
     margin-left: -10rem;
@@ -229,6 +232,17 @@ nav button {
     #experience img {
         width: 50vw;
     }
+}
+
+.blimp {
+    -moz-transition: transform 0.325s ease-in-out;
+    -webkit-transition: transform 0.325s ease-in-out;
+    -ms-transition: transform 0.325s ease-in-out;
+    transition: transform 0.325s ease-in-out;
+}
+
+.blimp:hover {
+    transform: scale(1.1);
 }
 
 /* ====================================
