Move old stuff to OLD folder

--- a/OLD/css/custom.css
+++ b/OLD/css/custom.css
@@ -278,7 +278,7 @@ nav button {
 }
 
 /* ====================================
- * DIMENSION
+ * DIMENSION: Popup
  * Credits:https://html5up.net/dimension
  * ==================================== */
 
