--- a/css/custom.css
+++ b/css/custom.css
@@ -18,6 +18,17 @@
     overflow: hidden;
     font-family: 'Khand', sans-serif;
     color: white;
+
+    /* Default transition */
+    transition: all 0.5s ease-in-out 0s;
+}
+
+.hidden {
+    display: none;
+}
+
+.row {
+  align-content: center;
 }
 
 
@@ -33,6 +44,46 @@
 
 
 /* ====================================
+ * BUTTONS
+ * ==================================== */
+
+.expand-button {
+    width: 8vh;
+    height: 8vh;
+    border-radius: 100%;
+    background-color: rgba(0, 0, 0, 0);
+    border: 2px solid white;
+    color: white;
+    text-decoration: none;
+    line-height: 1.15;
+    margin-left: 3vh;
+    margin-right: 3vh;
+}
+
+.expand-button:hover {
+    width: 24vh;
+    border-radius: 8vh;
+    border: 3px solid white;
+    background-color: white;
+    color: black;
+}
+
+.expand-button:hover i {
+    color: black;
+    transform: translateY(0.25rem);
+    padding-right: 1rem;
+}
+
+.expand-button-content {
+    display: none;
+    transition: none;
+    color: black;
+    margin: auto;
+    font-size: 2rem;
+    text-align: center;
+}
+
+/* ====================================
  * CONTENT PORTALS
  * ==================================== */
 #content {
@@ -40,22 +91,49 @@
     height: 100vh;
     width: 100vw;
     z-index: 100;
-    animation: launch-content 1s ease-in 0.7s 1 forwards;
+    /* animation: launch-content 1s ease-in 0.7s 1 forwards; ENABLED THROUGH SCRIPT */
 }
 
 /* ====================================
  * ANIMATIONS
  * ==================================== */
 @keyframes launch-content {
-   0% {}
-   20% {transform: translateY(-100%);}
-   50% {transform: translateY(-60%);}
-   30%,70% {transform: translateY(-80%);}
-   40%,60% {transform: translateY(-65%);}
-   80% {transform: translateY(-100%);}
-   85%,95% {transform: translateY(-92%);}
-   90% {transform: translateY(-90%);}
-   100% {transform: translateY(-100%);}
+    0% {}
+
+    20% {
+        transform: translateY(-100%);
+    }
+
+    50% {
+        transform: translateY(-70%);
+    }
+
+    30%,
+    70% {
+        transform: translateY(-85%);
+    }
+
+    40%,
+    60% {
+        transform: translateY(-75%);
+    }
+
+    80% {
+        transform: translateY(-100%);
+    }
+
+    85%,
+    95% {
+        transform: translateY(-92%);
+    }
+
+    90% {
+        transform: translateY(-90%);
+    }
+
+    100% {
+        transform: translateY(-100%);
+    }
 }
 
 /* Firefox < 16 */
