Add file headers

--- a/css/custom.css
+++ b/css/custom.css
@@ -1,11 +1,15 @@
-/* Custom CSS styles by Ben Cuan */
-
-/* Created Summer 2019           */
+/* ---------------------------------------- */
+/* Custom CSS styles for https://bencuan.me */
+/* © 2019 Ben Cuan - MIT License            */
+/* Created Summer 2019                      */
+/* ---------------------------------------- */
 
 /* ====================================
  * COLOR PALETTE
  * https://materializecss.com/color.html
  * #23BCFF Background Blue
+ * #888888 Dark Grey
+ * #FFFFFF White
  * #283593 indigo darken-3
  * #90caf9 blue lighten-3
  * ==================================== */
