--- a/css/custom.css
+++ b/css/custom.css
@@ -1,7 +1,11 @@
 /* ---------------------------------------- */
+
 /* Custom CSS styles for https://bencuan.me */
+
 /* © 2019 Ben Cuan - MIT License            */
+
 /* Created Summer 2019                      */
+
 /* ---------------------------------------- */
 
 /* ====================================
@@ -63,7 +67,7 @@
   -webkit-mask-position-y: 30vh;
   -webkit-mask-position-x: 5vh;
   transition: none;
-  animation: paint-fill 5s ease-in-out 0s 1 forwards;
+  animation: paint-fill 4s ease-in-out 0s 1 forwards;
 }
 
 .grey-fill {
@@ -73,7 +77,7 @@
   background: #888888;
   height: 30vh;
   width: 30vh;
-  margin-top: 15vh;
+  margin-top: 10vh;
 }
 
 .button-row {
@@ -88,7 +92,7 @@
 
 .name {
   font-size: 5rem;
-  animation: show-after-delay 1s ease-in 2.5s 1 forwards;
+  animation: show-after-delay 1s ease-in 3s 1 forwards;
   opacity: 0;
 }
 
@@ -105,25 +109,30 @@
   color: white;
   text-decoration: none;
   line-height: 1.15;
-  margin-left: 3vh;
-  margin-right: 3vh;
-  margin-bottom: 3vh;
+  margin-left: 1vh;
+  margin-right: 1vh;
+  margin-bottom: 1vh;
   display: inline-block;
   white-space: nowrap;
 }
 
-.expand-button:hover {
-  width: 24vh;
-  border-radius: 8vh;
-  border: 3px solid white;
-  background-color: white;
-  color: black;
-}
-
-.expand-button:hover i {
-  color: black;
-  transform: translateY(-0.5rem);
-  padding-right: 1rem;
+@media only screen and (min-width: 768px) {
+  .expand-button {
+    margin-left: 3vh;
+    margin-right: 3vh;
+  }
+  .expand-button:hover {
+    width: 24vh;
+    border-radius: 8vh;
+    border: 3px solid white;
+    background-color: white;
+    color: black;
+  }
+  .expand-button:hover i {
+    color: black;
+    transform: translateY(-0.5rem);
+    padding-right: 1rem;
+  }
 }
 
 .expand-button-content {
@@ -139,6 +148,7 @@
 
 #launch-button {
   height: 8vh;
+  width: 16vh;
   background-color: rgba(0, 0, 0, 0);
   border: 2px solid white;
   color: white;
@@ -150,10 +160,9 @@
   animation: show-after-delay 1s ease-in 5s 1 forwards;
   font-size: 1.5rem;
   margin-top: 2vh;
-  white-space: normal;
 }
 
-/* #launch-button:hover {
+#launch-button:hover {
   width: 8vh;
   border-radius: 100%;
   margin-left: 4vh;
@@ -164,7 +173,7 @@
 
 #launch-button:hover i {
   color: black;
-} */
+}
 
 .anchor-bottom {
   bottom: 5vh;
