--- a/css/custom.css
+++ b/css/custom.css
@@ -282,11 +282,35 @@
   }
 }
 
+@keyframes launch-content-nobounce {
+  0% {}
+  20%, 99% {
+    transform: translateY(-100vh);
+  }
+}
+
 @keyframes launch-content-rope {
   to {
     height: 12vh;
     bottom: 0;
   }
+}
+
+@keyframes hide-rope {
+  from {
+    height: 12vh;
+    bottom: 0;
+  }
+
+  to {
+    height: 0;
+    bottom: 12vh;
+  }
+}
+
+@keyframes hide-content {
+  from { transform: translateY(-100vh) }
+  to { transform: translateY(0vh);}
 }
 
 @keyframes show-after-delay {
