--- a/css/custom.css
+++ b/css/custom.css
@@ -301,7 +301,6 @@
     height: 12vh;
     bottom: 0;
   }
-
   to {
     height: 0;
     bottom: 12vh;
@@ -309,8 +308,12 @@
 }
 
 @keyframes hide-content {
-  from { transform: translateY(-100vh) }
-  to { transform: translateY(0vh);}
+  from {
+    transform: translateY(-100vh)
+  }
+  to {
+    transform: translateY(0vh);
+  }
 }
 
 @keyframes show-after-delay {
@@ -332,4 +335,14 @@
     -webkit-mask-position-y: 0vh;
     -webkit-mask-position-x: -50vh;
   }
+}
+
+/* ==========================
+ *  CUSTOM SELECTION
+ * ========================== */
+
+::selection {
+  background: transparent;
+  /* WebKit/Blink Browsers */
+  text-shadow: 0 0 0.5rem #1976d2;
 }
