--- a/css/custom.css
+++ b/css/custom.css
@@ -45,17 +45,141 @@
 }
 
 /* ====================================
- * LANDING PAGE
+ * INTERCEPT PAGE
  * ==================================== */
 
-#landing {
-  background-color: #23BCFF;
+#welcome-page {
   height: 100vh;
   width: 100vw;
-  z-index: 0;
+  background-color: black;
+  position: fixed;
+  z-index: 1000;
+  animation: launch-intercept 0.5s ease-in-out 2s 1 forwards;
+  /* transition: none; */
+  opacity: 0;
+  font-family: 'Source Code Pro', monospace;
 }
 
-.splash-image {
+#welcome-page h1 {
+  font-family: 'Source Code Pro', monospace;
+  font-weight: bold;
+  font-size: 4rem;
+  animation: welcome-invert-text 1.5s ease-in-out 0.5s 1 forwards;
+  opacity: 0;
+  margin-top: 10vh !important;
+}
+
+#welcome-page h2 {
+  font-family: 'Source Code Pro', monospace;
+  font-size: 3rem;
+  font-weight: lighter;
+  animation: welcome-invert-text 1.5s ease-in-out 0.5s 1 forwards;
+  opacity: 0;
+  margin: 0;
+}
+
+/* Intercept texts */
+
+#welcome-page-text {
+  margin: 8vh;
+  display: inline-block;
+}
+
+.loading-intercepted-text {
+  font-family: 'Source Code Pro', monospace;
+}
+
+.typewriter {
+  overflow: hidden;
+  /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid transparent;
+  /* The typwriter cursor */
+  white-space: nowrap;
+  /* Keeps the content on a single line */
+  margin: 0 auto;
+  /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .15em;
+  /* Animations added on individual id styles*/
+  display: inline-block;
+  width: 0;
+  animation: typing 2s steps(40, end) 0s 1 forwards, blink-caret 0.5s step-end 3;
+}
+
+.glitch {
+  position: relative;
+}
+
+.glitch::before, .glitch::after {
+  content: attr(data-text);
+  position: absolute;
+  background: black;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.glitch::before {
+  /* ... anything needed to make it identical */
+  /* variation */
+  left: 3px;
+  text-shadow: -2px 0 red;
+  /* important: opaque background masks the original */
+  animation: glitch-anim-1 1s 3 ease-in-out 3s alternate-reverse;
+}
+
+.glitch::after {
+  /* ... anything needed to make it identical */
+  /* variation */
+  left: -3px;
+  text-shadow: -2px 0 blue;
+  /* important: opaque background masks the original */
+  animation: glitch-anim-2 1.5s 3 linear alternate-reverse;
+}
+
+.blue-glitch::before, .blue-glitch::after {
+  background: #23BCFF !important;
+  animation-delay: 1s !important;
+}
+
+#int-text-1 {
+  font-size: 2.5rem;
+  animation-delay: 3s !important;
+}
+
+#int-text-1:before, #int-text-1:after {
+  animation-delay: 3s !important
+}
+
+#int-text-2 {
+  animation-delay: 8s !important;
+}
+
+#int-text-2:before, #int-text-2:after {
+  animation-delay: 8s !important
+}
+#int-text-3 {
+  animation-delay: 11s !important;
+}
+
+#int-text-3:before, #int-text-3:after {
+  animation-delay: 11s !important
+}
+#int-text-4 {
+  animation-delay: 14s !important;
+}
+
+#int-text-4:before, #int-text-4:after {
+  animation-delay: 14s !important
+}
+
+/* Intercept image selection */
+
+#welcome-choice {
+  opacity: 0;
+  animation: show-after-delay 3s ease-in-out 15s 1 forwards;
+}
+.splash-image-pixel {
   height: 30vh;
   width: 30vh;
   background-image: url('../img/profile.png');
@@ -66,8 +190,16 @@
   -webkit-mask-size: cover;
   -webkit-mask-position-y: 30vh;
   -webkit-mask-position-x: 5vh;
-  transition: none;
-  animation: paint-fill 4s ease-in-out 0s 1 forwards;
+}
+
+.welcome-box {
+  border: 5px solid black;
+  height: 30vw;
+  width: 30vw;
+}
+
+.splash-image-pixel:hover {
+  animation: paint-fill 2s ease-in-out 0s 1 forwards;
 }
 
 .grey-fill {
@@ -77,7 +209,33 @@
   background: #888888;
   height: 30vh;
   width: 30vh;
-  margin-top: 10vh;
+}
+
+/* Skip button */
+
+#skip-button-container {
+  position: absolute;
+  opacity: 1;
+  top: 2vw;
+  right: 2vw;
+  z-index: 999;
+  padding: 1px;
+  cursor: pointer;
+}
+
+#skip-button-container:hover {
+  border: solid white 1px;
+}
+
+/* ====================================
+ * LANDING PAGE
+ * ==================================== */
+
+#landing {
+  background-color: #23BCFF;
+  height: 100vh;
+  width: 100vw;
+  z-index: 0;
 }
 
 .button-row {
@@ -101,6 +259,16 @@
   position: absolute;
   width: 100vw;
   height: 15vh;
+}
+
+#white-overlay {
+  height: 100vh;
+  width: 100vw;
+  background-color: white;
+  position: fixed;
+  z-index: 1000;
+  opacity: 0;
+  transition: none;
 }
 
 /* ====================================
@@ -248,93 +416,6 @@
   opacity: 0;
   bottom: 5vw;
   right: 5vw;
-}
-
-/* ====================================
- * ANIMATIONS
- * ==================================== */
-
-@keyframes launch-content {
-  0% {}
-  20% {
-    transform: translateY(-100vh);
-  }
-  50% {
-    transform: translateY(-70vh);
-  }
-  30%, 70% {
-    transform: translateY(-85vh);
-  }
-  40%, 60% {
-    transform: translateY(-75vh);
-  }
-  80% {
-    transform: translateY(-100vh);
-  }
-  85%, 95% {
-    transform: translateY(-92vh);
-  }
-  90% {
-    transform: translateY(-90vh);
-  }
-  100% {
-    transform: translateY(-100vh);
-  }
-}
-
-@keyframes launch-content-nobounce {
-  0% {}
-  20%, 99% {
-    transform: translateY(-100vh);
-  }
-}
-
-@keyframes launch-content-rope {
-  to {
-    height: 12vh;
-    bottom: 0;
-  }
-}
-
-@keyframes hide-rope {
-  from {
-    height: 12vh;
-    bottom: 0;
-  }
-  to {
-    height: 0;
-    bottom: 12vh;
-  }
-}
-
-@keyframes hide-content {
-  from {
-    transform: translateY(-100vh)
-  }
-  to {
-    transform: translateY(0vh);
-  }
-}
-
-@keyframes show-after-delay {
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes hide-after-delay {
-  to {
-    opacity: 0;
-    display: none;
-    height: 0;
-  }
-}
-
-@keyframes paint-fill {
-  to {
-    -webkit-mask-position-y: 0vh;
-    -webkit-mask-position-x: -50vh;
-  }
 }
 
 /* ==========================
